src/app/components/direct-message/direct-message.component.scss
@import "../../../styles.scss";

.direct-m-container {
  position: relative;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  height: 100%;
  background-color: white;
  border-radius: 30px;

  .direct-m-header {
    width: 100%;
    display: flex;
    padding: 32px 45px 20px 45px;
    border-radius: 30px 30px 0 0;
    box-shadow: 0px 2px 10px 0px rgb(0, 0, 0, 0.08);

    .header-img-container {
      position: relative;

      img {
        width: 50px;
        height: 50px;
      }

      .on-off-line-sign {
        position: absolute;
        top: 40px;
        left: 56px;
        width: 14px;
        height: 14px;
        // background-color: $onlinedot-online;
        border: 2px solid white;
        border-radius: 100%;
      }
    }

    .hoverImgContainer {
      position: relative;
      gap: 20px;
      display: flex;
      align-items: center;
      cursor: pointer;
      padding: 4px 20px;
      border-radius: 35px;

      img {
        border-radius: 50%;
      }
      .header-username {
        font-size: 24px;
        font-weight: 700;
      }


      &:hover {
        background-color: $violet-bright;
      }
    }

    .onlinedot {
      position: absolute;
      content: '';
      bottom: 6px;
      left: 57px;
      width: 17px;
      height: 17px;
      box-sizing: border-box;
      background-color: $onlinedot-online;
      border: 2px solid $onlinedot-border;
      border-radius: 50%;

      &.online {
        background-color: $onlinedot-online;
      }

      &.idle {
        background-color: #c8c82e;
      }

      &.offline {
        background-color: $onlinedot-offline;
      }

      @media screen and (max-width: 768px) {
        width: 14px;
        height: 14px;
      }
    }
  }

  .direct-m-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;

    .direct-m-items {
      width: 100%;
      height: 385px;
      overflow-y: auto;
      @include scrollbar();
    }

    .direct-m-mem {
      width: 80%;
      display: flex;
      flex-direction: column;
      margin-left: 45px;
      gap: 24px;

      .direct-m-mem-header {
        display: flex;
        align-items: flex-end;
        gap: 20px;

        span:hover {
          color: rgb(68, 77, 242);
          cursor: pointer;
        }

        .member-img-container {
          position: relative;

          img {
            width: 100px;
            height: 100px;
            border-radius: 50%;
          }
        }

        span {
          font-size: 24px;
          font-weight: 700;
          line-height: 32.74px;
        }
      }

      p {
        gap: 10px;
        font-size: 20px;
        font-weight: 400;
        line-height: 27.28px;
        color: $grey;
        margin-bottom: 0;

        span {
          color: $purple-blue-bright;
        }
      }
    }

    app-message-box {
      width: 90%;
      margin-top: 20px;
    }
  }

  emoji-mart {
    position: absolute;
    top: 50px;
  }

  app-forbidden-channel-feedback {
    width: 100%;
    height: 100%;
  }
}

.mobile-wrapper {
  display: contents;
}

@media screen and (max-width: 768px) {

  // .direct-m-container{
  //   height: 90%;
  // }
  .mobile-wrapper {
    position: absolute;
    left: 0;
    right: 0;
    height: 100%;
    display: block;

    .direct-m-container {
      border-radius: 0;

      .direct-m-header {
        border-radius: 0;
      }
    }


  }


  #mobile-direct-m-mem p {
    display: block;
  }



}

